--- a/templates/about.html
+++ b/templates/about.html
@@ -26,19 +26,19 @@
     <div class="flex justify-center gap-4 flex-wrap">
         <div
             class="w-40 h-40 bg-white rounded-lg shadow-lg overflow-hidden transform rotate-[-3deg] hover:rotate-0 transition-transform">
-            <img src="{% static 'image/oil _painting.jpg' %}" class="w-full h-full object-cover">
+            <img src="{% static 'image/oil painting1.jpg' %}" class="w-full h-full object-cover">
         </div>
         <div
             class="w-40 h-40 bg-white rounded-lg shadow-lg overflow-hidden transform rotate-[2deg] hover:rotate-0 transition-transform">
-            <img src="{% static 'image/oil _painting.jpg' %}" class="w-full h-full object-cover">
+            <img src="{% static 'image/oil painting1.jpg' %}" class="w-full h-full object-cover">
         </div>
         <div
             class="w-40 h-40 bg-white rounded-lg shadow-lg overflow-hidden transform rotate-[-2deg] hover:rotate-0 transition-transform">
-            <img src="{% static 'image/oil _painting.jpg' %}" class="w-full h-full object-cover">
+            <img src="{% static 'image/oil painting1.jpg' %}" class="w-full h-full object-cover">
         </div>
         <div
             class="w-40 h-40 bg-white rounded-lg shadow-lg overflow-hidden transform rotate-[3deg] hover:rotate-0 transition-transform">
-            <img src="{% static 'image/oil _painting.jpg' %}" class="w-full h-full object-cover">
+            <img src="{% static 'image/oil painting1.jpg' %}" class="w-full h-full object-cover">
         </div>
     </div>
 </section>
