--- a/templates/event.html
+++ b/templates/event.html
@@ -63,31 +63,21 @@
     <div class="container mx-auto px-4 grid md:grid-cols-3 gap-8 text-center">
         <div>
             <div class="w-16 h-16 mx-auto mb-4 bg-green-100 rounded-full flex items-center justify-center">
-                <svg class="w-8 h-8 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7"></path>
-                </svg>
+                <i class="bi bi-check-lg  text-3xl text-green-600"></i>
             </div>
             <h3 class="text-xl font-bold mb-2">CHOOSE EVENTS AND TICKETS</h3>
             <p class="text-gray-600">With just a few clicks</p>
         </div>
         <div>
             <div class="w-16 h-16 mx-auto mb-4 bg-green-100 rounded-full flex items-center justify-center">
-                <svg class="w-8 h-8 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                        d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z">
-                    </path>
-                </svg>
+                <i class="bi bi-cart3  text-3xl text-green-600"></i>
             </div>
             <h3 class="text-xl font-bold mb-2">BUY DIRECTLY FROM ORGANIZERS</h3>
             <p class="text-gray-600">Pay online or cash on delivery</p>
         </div>
         <div>
             <div class="w-16 h-16 mx-auto mb-4 bg-green-100 rounded-full flex items-center justify-center">
-                <svg class="w-8 h-8 text-green-600" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                        d="M15 5v2m0 4v2m0 4v2M5 5a2 2 0 00-2 2v3a2 2 0 110 4v3a2 2 0 002 2h14a2 2 0 002-2v-3a2 2 0 110-4V7a2 2 0 00-2-2H5z">
-                    </path>
-                </svg>
+                <i class="bi bi-ticket-perforated text-3xl text-green-600"></i>
             </div>
             <h3 class="text-xl font-bold mb-2">RECEIVE TICKETS</h3>
             <p class="text-gray-600">Via email or right at your door</p>
@@ -98,49 +88,87 @@
 
 
 <!-- Featured Events -->
-<section class="py-8 bg-white">
+<section class="pb-8 bg-white">
     <div class="container mx-auto px-4">
-        <div class="flex items-center justify-between mb-8">
-            <h2 class="text-3xl font-bold flex items-center">
-                <span class="mr-2"></span> Featured Events
-            </h2>
-            
-        </div>
+        <div class="pb-6 max-w-sm mx-auto items-center text-center">
+    <h2 class="text-3xl font-bold">
+        Featured Events
+    </h2>
+</div>
         <div class="grid md:grid-cols-3 gap-6">
+
             <!-- Featured Card 1 -->
             <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition">
                 <div class="relative h-48 "> <img src="{% static 'image/event2.jpg' %}"
                         class="w-full h-full object-cover">
                 </div>
                 <div class="p-4">
-                    <h3 class="font-bold mb-2">Food Exhibition </h3>
-                    <p class="text-sm text-gray-600 mb-2">Patan</p>
-                    <p class="text-base font-bold text-green-600">Free Entry</p>
+                    <h3 class="font-extrabold text-2xl text-gray-800 mb-1 group-hover:text-custom-green transition">
+                        Food Exhibition 2025
+                    </h3>
+                    <div class="flex items-center text-sm text-gray-500 mb-3">
+                        <i class="bi bi-geo-alt-fill"></i>
+                        Patan, Nepal
+                    </div>
+                    <div class="pt-4 border-t border-gray-100 mt-4 flex justify-between items-center">
+                        <p class="text-xl font-bold text-gray-800">
+                            Free Entry
+                        </p>
+                        <a class="px-4 py-2 bg-gray-800 text-white font-medium text-sm 
+                                   rounded-lg shadow-md hover:bg-emerald-600 ">
+                            Details
+                        </a>
+                    </div>
                 </div>
             </div>
 
             <!-- Featured Card 2 -->
             <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition">
-                <div class="relative h-48 bg-gray-900">
-                    <img src="{% static 'image/event3.jpg' %}" class="w-full h-full object-cover">
-
-                </div>
-                <div class="p-4">
-                    <h3 class="font-bold mb-2">Cloth Exhibition</h3>
-                    <p class="text-sm text-gray-600 mb-2">Labim Mall</p>
-                    <p class="text-sm font-bold text-green-600">Entry Fee-Rs.200</p>
-                </div>
-            </div>
-
-            <!-- Featured Card 3 -->
-             <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition">
                 <div class="relative h-48 "> <img src="{% static 'image/event2.jpg' %}"
                         class="w-full h-full object-cover">
                 </div>
                 <div class="p-4">
-                    <h3 class="font-bold mb-2">Food Exhibition </h3>
-                    <p class="text-sm text-gray-600 mb-2">Patan</p>
-                    <p class="text-base font-bold text-green-600">Free Entry</p>
+                    <h3 class="font-extrabold text-2xl text-gray-800 mb-1 group-hover:text-custom-green transition">
+                        Food Exhibition 2025
+                    </h3>
+                    <div class="flex items-center text-sm text-gray-500 mb-3">
+                        <i class="bi bi-geo-alt-fill"></i>
+                        Patan, Nepal
+                    </div>
+                    <div class="pt-4 border-t border-gray-100 mt-4 flex justify-between items-center">
+                        <p class="text-xl font-bold text-gray-800">
+                            Free Entry
+                        </p>
+                        <a class="px-4 py-2 bg-gray-800 text-white font-medium text-sm 
+                                   rounded-lg shadow-md hover:bg-emerald-600 ">
+                            Details
+                        </a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Featured Card 3 -->
+            <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition">
+                <div class="relative h-48 "> <img src="{% static 'image/event3.jpg' %}"
+                        class="w-full h-full object-cover">
+                </div>
+                <div class="p-4">
+                    <h3 class="font-extrabold text-2xl text-gray-800 mb-1 group-hover:text-custom-green transition">
+                        Food Exhibition 2025
+                    </h3>
+                    <div class="flex items-center text-sm text-gray-500 mb-3">
+                        <i class="bi bi-geo-alt-fill"></i>
+                        Patan, Nepal
+                    </div>
+                    <div class="pt-4 border-t border-gray-100 mt-4 flex justify-between items-center">
+                        <p class="text-xl font-bold text-gray-800">
+                            Entry Fee - Rs.200
+                        </p>
+                        <a class="px-4 py-2 bg-gray-800 text-white font-medium text-sm 
+                                   rounded-lg shadow-md hover:bg-emerald-600 ">
+                            Details
+                        </a>
+                    </div>
                 </div>
             </div>
         </div>
