--- a/templates/event.html
+++ b/templates/event.html
@@ -24,7 +24,7 @@
 <section class="relative h-130 bg-gradient-to-r from-purple-900 via-purple-700 to-pink-600 overflow-hidden">
     <div class="absolute inset-0 bg-black opacity-40"></div>
     <div class="absolute inset-0 flex items-center justify-center text-center text-white">
-        <!-- Swiper carousel for product images -->
+        <!-- Swiper -->
         <div class="swiper w-full h-full rounded">
             <div class="swiper-wrapper">
                 <div class="swiper-slide flex items-center justify-center h-full">
