--- a/templates/team.html
+++ b/templates/team.html
@@ -55,7 +55,7 @@
 {% block content %}
 <section class="max-w-7xl mx-auto">
     <h1 class="text-5xl font-extrabold text-gray-900 text-center mb-12 mt-8 tracking-tight">Team Member</h1>
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
+    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-6">
 
         <!-- Team Member 1 -->
         <div class="flip-card-wrapper perspective-1000">
