--- a/templates/base.html
+++ b/templates/base.html
@@ -7,26 +7,7 @@
   <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 <style>
-        :root {
-      --container-bg: #f8f9fa;
-      --primary-bg: #131921;
-      --secondary-bg: #232f3e;
-      --accent-color: #ff9900;
-      --search-bg: #3e3f29;
-      --search-input-bg: #040303;
-      --text-primary: #ffffff;
-      --text-secondary: #555;
-      --text-link: #007185;
-      --text-link-hover: #c7511f;
-      --border-color: #ddd;
-      --hover-bg: rgba(255, 255, 255, 0.1);
-      --shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
-      --discount-badge-bg: #dc3545;
-      --like-btn-bg: whitesmoke;
-      --like-btn-hover-bg: #dbdada;
-      --stock-in: #28a745;
-      --like-icon-color: #ccc;
-    }
+      
 
   </style>
   {% block extra_css %}
@@ -37,7 +18,7 @@
 
   {% include 'navbar.html' %}
 
-  <main>
+  <main class="pt-15">
     {% block content %}{% endblock %}
   </main>
 
@@ -63,6 +44,13 @@
 
                 });
             });
+
+            module.exports = {
+  plugins: [
+    require('@tailwindcss/line-clamp'),
+  ],
+}
+
         </script>
         {% block extra_js %}
 
