--- a/templates/services.html
+++ b/templates/services.html
@@ -5,6 +5,27 @@
 
 {% block extra_css %}
 <style>
+.hero-banner {
+    background-image: url('/static/image/banner4.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    min-height: 450px; 
+}
+
+/* Small Screens */
+@media (max-width: 1200px) {
+    .hero-banner {
+        min-height: 280px; 
+    }
+}
+
+/* Very Small Mobile */
+@media (max-width: 360px) {
+    .hero-banner {
+        min-height: 180px;
+    }
+}
 
 </style>
 {% endblock %}
@@ -12,24 +33,17 @@
 {% block content %}
 
 
-<section class="hero-banner relative flex items-end"
-    style="
-background-image: url('{% static "image/banner4.jpg" %}');   
-        background-size: cover;
-        background-position: center;
-        background-repeat: no-repeat;
-        min-height: 520px;
-    ">
+<section class="hero-banner relative flex items-end">
 
-    <div class="relative z-10 p-8 md:p-16 text-white max-w-7xl mx-auto w-full">
-        <p class="text-sm font-semibold tracking-widest uppercase mb-2 opacity-80 border-l-4 border-orange-500 pl-3">
+    <div class="relative p-8 md:p-16 text-white max-w-7xl mx-auto w-full">
+        <p class="text-sm font-semibold  uppercase mb-2 opacity-80 border-l-4 border-orange-500 pl-3">
             What We Offer</p>
         <h1 class="text-5xl md:text-6xl font-extrabold leading-tight">Our Services</h1>
     </div>
 </section>
-<section class="w-full py-16 bg-white">
+<section class="w-full py-16 bg-white ">
     <div class="container mx-auto px-4">
-        <div class="grid grid-cols-1 md:grid-cols-3 gap-15 mx-10">
+        <div class="grid grid-cols-1 md:grid-cols-3 gap-15 mx-2 sm:mx-4 md:p-0 px-2">
 
             <!-- Left Side -->
             <div class="md:col-span-1">
