--- a/templates/home.html
+++ b/templates/home.html
@@ -119,7 +119,7 @@
                     dolore magna aliqua.
                     We craft roadmaps for future success.
                 </p>
-                <a href="#" class="inline-flex items-center text-primary-orange font-semibold hover:text-orange-800 transition duration-300 text-sm">
+                <a href="#" class="inline-flex items-center text-primary-orange font-semibold hover:text-orange-800  text-sm">
                     Read More <i class="bi bi-arrow-right ml-1"></i>
                 </a>
             </div>
@@ -293,7 +293,7 @@
             </div>
         </div>
 
-        <div class="md:hidden blog-carousel-container splide">
+        <div class=" blog-carousel-container splide">
             <ul class="blog-carousel-list p-2 splide__list">
                 <li class="blog-slide splide__slide">
                     <div
