--- a/templates/services.html
+++ b/templates/services.html
@@ -76,33 +76,62 @@
 </section>
 
 
-<section class="container mx-auto p-8">
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-8">
+<section class="p-10 sm:p-10">
+    <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8 m-8">
+        <div class="grid grid-cols-2 md:grid-cols-2 lg:grid-cols-4 gap-8 sm:gap-4 ">
 
-        <div class="bg-gray-200 p-8 rounded-xl shadow-lg hover:shadow-2xl transition duration-300 transform hover:scale-[1] text-center">
-            <div class="card-icon mb-4">
-                <i class="bi bi-clock text-5xl"></i>
+            <div class="">
+                <div class="mb-3 text-3xl text-gray-800">
+                    <i class="bi bi-truck"></i>
+                </div>
+                <h3 class="text-lg font-semibold mb-1 text-gray-900">
+                    Free Delivery
+                </h3>
+                <p class="text-xs text-gray-600 line-clamp-3 sm:line-clamp-none">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                </p>
             </div>
-            <h3 class="text-lg font-semibold text-gray-800 mb-2">24/7 Services  </h3>
-            <p class="text-sm text-gray-500 leading-relaxed">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit magna dolor sit amet consectetur adipiscing do
-                elite labore.
-            </p>
-        </div>
-        
-         <div class="bg-gray-200 p-8 rounded-xl shadow-lg hover:shadow-2xl transition duration-300 transform hover:scale-[1] text-center">
-            <div class="card-icon mb-4">
-<i class="bi bi-geo-alt-fill text-5xl"></i>
-            </div>
-            <h3 class="text-lg font-semibold text-gray-800 mb-2">Delevery All Over Nepal  </h3>
-            <p class="text-sm text-gray-500 leading-relaxed">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit magna dolor sit amet consectetur adipiscing do
-                elite labore.
-            </p>
-        </div>
 
+            <div class="flex flex-col items-center text-center">
+                <div class="mb-3 text-3xl text-gray-800">
+                    <i class="bi bi-box-seam"></i>
+                </div>
+                <h3 class="text-lg font-semibold mb-1 text-gray-900">
+                    Return Guarantee
+                </h3>
+                <p class="text-xs text-gray-600 line-clamp-3 sm:line-clamp-none">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod.
+                </p>
+            </div>
+
+            <div class="flex flex-col items-center text-center">
+                <div class="mb-3 text-3xl text-gray-800">
+                    <i class="bi bi-clock"></i>
+                </div>
+                <h3 class="text-lg font-semibold mb-1 text-gray-900">
+                    24/7 Support
+                </h3>
+                <p class="text-xs text-gray-600 line-clamp-3 sm:line-clamp-none">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt.
+                </p>
+            </div>
+
+            <div class="flex flex-col items-center text-center">
+                <div class="mb-3 text-3xl text-gray-800">
+                    <i class="bi bi-globe-central-south-asia"></i>
+                </div>
+                <h3 class="text-lg font-semibold mb-1 text-gray-900">
+                    Worldwide delivery
+                </h3>
+                <p class="text-xs text-gray-600 line-clamp-3 sm:line-clamp-none">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                </p>
+            </div>
+
+        </div>
     </div>
 </section>
+
 {% endblock %}
 
 {% block extra_js %}
