--- a/templates/blog.html
+++ b/templates/blog.html
@@ -13,37 +13,33 @@
             <div class="grid gap-8">
                 <!-- Featured Article -->
                 <div
-                    class="bg-white rounded-lg overflow-hidden shadow-sm hover:shadow-md transition-shadow flex flex-col md:flex-row h-100">
-
+                    class="bg-white rounded-lg overflow-hidden shadow-sm hover:shadow-md transition-shadow flex flex-col md:flex-row">
                     <!-- Left Image -->
                     <img src="{% static 'image/blog post1.jpg' %}" alt="Credit card"
-                        class="mx-auto h-full md:w-1/2 h-64 md:h-auto object-cover">
+                        class="w-full h-[200px] md:h-[350px] md:w-1/2 object-cover">
 
                     <!-- Right Content -->
-                    <div class="p-6 flex flex-col  md:w-1/2">
+                    <div class="p-4 md:p-6 flex flex-col md:w-1/2">
                         <span class="text-xs font-semibold text-gray-500 uppercase tracking-wide">
                             Lorem
                         </span>
 
-                        <h2 class="text-xl font-bold text-gray-900 mt-2 mb-3">
+                        <h2 class="text-lg md:text-xl font-bold text-gray-900 mt-2 mb-3">
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry.
                         </h2>
 
-                        <p class="text-sm text-gray-600 mb-3">
+                        <p class="text-sm text-gray-600 mb-3 line-clamp-3">
                             Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has
                             been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
                             galley of type and scrambled it to make a type specimen book. It has survived not only five
                             centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
                         </p>
 
-                        <p class="text-sm text-gray-600">
+                        <p class="text-xs md:text-sm text-gray-600">
                             lomre • 25 Jan 2022
                         </p>
                     </div>
-
                 </div>
-
-
                 <!-- Small Articles Grid -->
                 <div class="grid grid-cols-1 sm:grid-cols-3 gap-4">
                     <!-- Article 1 -->
