--- a/templates/event.html
+++ b/templates/event.html
@@ -14,6 +14,12 @@
     .swiper-button-prev {
         display: none !important;
     }
+
+    @media (max-width: 1200px) {
+        .swiper {
+            min-height: 280px;
+        }
+    }
 </style>
 {% endblock %}
 
@@ -21,7 +27,8 @@
 
 
 <!-- Hero Section -->
-<section class="relative h-130 bg-gradient-to-r from-purple-900 via-purple-700 to-pink-600 overflow-hidden">
+<section
+    class="relative h-[200px] md:h-[400px]  bg-gradient-to-r from-purple-900 via-purple-700 to-pink-600 overflow-hidden">
     <div class="absolute inset-0 bg-black opacity-40"></div>
     <div class="absolute inset-0 flex items-center justify-center text-center text-white">
         <!-- Swiper -->
@@ -58,44 +65,61 @@
     </div>
 </section>
 
-<!-- Features -->
-<section class="py-8 bg-white">
-    <div class="container mx-auto px-4 grid md:grid-cols-3 gap-8 text-center">
-        <div>
-            <div class="w-16 h-16 mx-auto mb-4 bg-green-100 rounded-full flex items-center justify-center">
-                <i class="bi bi-check-lg  text-3xl text-green-600"></i>
+<section class="p-10 sm:p-14">
+    <div class="max-w-6xl mx-auto px-4 sm:px-6 lg:px-8">
+        <div class="grid grid-cols-2 md:grid-cols-2 lg:grid-cols-3 gap-8 sm:gap-4 ">
+
+            <div class="flex flex-col items-center text-center">
+                <div class="mb-3 text-3xl text-gray-800">
+                    <i class="bi bi-check-lg  text-3xl text-green-600"></i>
+                </div>
+                <h3 class="text-lg font-semibold mb-1 text-gray-900">
+                    CHOOSE EVENTS AND TICKETS
+                </h3>
+                <p class="text-xs text-gray-600 line-clamp-3 sm:line-clamp-none">
+                    With just a few clicks </p>
             </div>
-            <h3 class="text-xl font-bold mb-2">CHOOSE EVENTS AND TICKETS</h3>
-            <p class="text-gray-600">With just a few clicks</p>
-        </div>
-        <div>
-            <div class="w-16 h-16 mx-auto mb-4 bg-green-100 rounded-full flex items-center justify-center">
-                <i class="bi bi-cart3  text-3xl text-green-600"></i>
+
+            <div class="flex flex-col items-center text-center">
+                <div class="mb-3 text-3xl text-gray-800">
+                    <i class="bi bi-cart3  text-3xl text-green-600"></i>
+                </div>
+                <h3 class="text-lg font-semibold mb-1 text-gray-900">
+                    BUY DIRECTLY FROM ORGANIZERS
+                </h3>
+                <p class="text-xs text-gray-600 line-clamp-3 sm:line-clamp-none">
+                    Pay online or cash on delivery Sed do eiusmod.
+                </p>
             </div>
-            <h3 class="text-xl font-bold mb-2">BUY DIRECTLY FROM ORGANIZERS</h3>
-            <p class="text-gray-600">Pay online or cash on delivery</p>
-        </div>
-        <div>
-            <div class="w-16 h-16 mx-auto mb-4 bg-green-100 rounded-full flex items-center justify-center">
-                <i class="bi bi-ticket-perforated text-3xl text-green-600"></i>
+
+            <div class="flex flex-col items-center text-center">
+                <div class="mb-3 text-3xl text-gray-800">
+                    <i class="bi bi-ticket-perforated text-3xl text-green-600"></i>
+                </div>
+                <h3 class="text-lg font-semibold mb-1 text-gray-900">
+                    RECEIVE TICKETS
+                </h3>
+                <p class="text-xs text-gray-600 line-clamp-3 sm:line-clamp-none">
+                    Via email or right at your door
+                </p>
             </div>
-            <h3 class="text-xl font-bold mb-2">RECEIVE TICKETS</h3>
-            <p class="text-gray-600">Via email or right at your door</p>
         </div>
     </div>
 </section>
 
 
 
+
+
 <!-- Featured Events -->
-<section class="pb-8 bg-white">
+<section class="p-8  bg-white">
     <div class="container mx-auto px-4">
         <div class="pb-6 max-w-sm mx-auto items-center text-center">
-    <h2 class="text-3xl font-bold">
-        Featured Events
-    </h2>
-</div>
-        <div class="grid md:grid-cols-3 gap-6">
+            <h2 class="text-3xl font-bold">
+                Featured Events
+            </h2>
+        </div>
+        <div class="grid  md:grid-cols-3 gap-6">
 
             <!-- Featured Card 1 -->
             <div class="bg-white rounded-lg shadow-lg overflow-hidden hover:shadow-xl transition">
