--- a/templates/shop.html
+++ b/templates/shop.html
@@ -25,7 +25,7 @@
 {% block content %}
 <!-- slider -->
 <section class="w-full">
-    <div class="swiper w-full h-64 sm:h-80 md:h-96 lg:h-[300px] xl:h-[400px] rounded-lg overflow-hidden">
+    <div class="swiper w-full h-[200px] md:h-[400px] md:h-96 lg:h-[300px] xl:h-[400px] rounded-lg overflow-hidden">
         <div class="swiper-wrapper">
             <div class="swiper-slide flex items-center justify-center h-full">
                 <img src="{% static 'image/banner1.jpg' %}" alt="Oil Painting 1" class="w-full h-full object-cover">
@@ -52,7 +52,16 @@
 
 <!-- Product Grid -->
 <div class="flex-1">
-    <section class="p-1 sm:p-2 md:p-4 bg-white">
+    <section class="p-1 sm:p-2 md:p-3 bg-white">
+        <div class="flex items-center justify-between bg-gray-200 p-2 rounded  mb-4">
+                    <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold text-gray-800">
+                        shop
+                    </h2>
+                    <a href="#"
+                        class="inline-block py-2 px-4 text-base font-medium bg-white text-gray-600 border border-gray-100 rounded-lg hover:bg-gray-50">
+                        View All Product
+                    </a>
+                </div>
         <div class="flex flex-col md:flex-row gap-6">
 
             <div class="md:flex-grow md:w-3/4 bg-gray-200 shadow-lg rounded-lg p-2 sm:p-6 mb-2">
@@ -257,7 +266,7 @@
         </div>
     </section>
 
-    <section class="p-2 sm:p-2 md:p-4 bg-white">
+    <section class="p-2 sm:p-2 md:p-3 bg-white">
         <div class="flex flex-col md:flex-row gap-6">
 
             <div class="md:flex-grow md:w-3/4 bg-gray-200 shadow-lg rounded-lg p-4 sm:p-6 mb-2">
@@ -272,7 +281,7 @@
                 </div>
 
                 <div
-                    class="grid grid-cols-1 xs:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-3 sm:gap-4 md:gap-6">
+                    class="grid grid-cols-2 xs:grid-cols-2 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-3 sm:gap-4 md:gap-6">
                     <div class="bg-white rounded-lg shadow-md hover:shadow-xl transition p-3 sm:p-4 flex flex-col">
                         <div class="w-full aspect-square mb-3 overflow-hidden rounded-lg">
                             <div class="swiper w-full h-full">
